bgcodeViewer/e.txt
   Compiling gcode-nom v0.1.0 (/home/martin/build/gcode-nom/lib)
warning: unused imports: `SlicerBlock` and `slicer_parser_with_checksum`
  --> lib/src/binary/mod.rs:44:20
   |
44 | use slicer_block::{slicer_parser_with_checksum, SlicerBlock};
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: `print_metadata_block::param::Param` doesn't implement `std::fmt::Display`
  --> lib/src/binary/print_metadata_block/mod.rs:71:31
   |
71 |     println!("extracted param {param}");
   |                               ^^^^^^^ `print_metadata_block::param::Param` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `print_metadata_block::param::Param`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `compressed_size`
  --> lib/src/binary/file_metadata_block/mod.rs:63:9
   |
63 |         compressed_size,
   |         ^^^^^^^^^^^^^^^ help: try ignoring the field: `compressed_size: _`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `bad_value`
  --> lib/src/binary/thumbnail_block/param.rs:67:13
   |
67 |             bad_value => Err("Format Value was not recognised Ox{bad_value:X}"),
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_bad_value`

For more information about this error, try `rustc --explain E0277`.
warning: `gcode-nom` (lib) generated 3 warnings
error: could not compile `gcode-nom` (lib) due to 1 previous error; 3 warnings emitted
